refactor(backend): 代码清理与现代化改进
- 移除未使用的导入和冗余变量
- 内部类 IntentResult 改为 Java Record
- 使用 Math.clamp() 替代 max/min 边界检查
- 使用 List.getFirst() 替代 get(0)
- 添加 @NonNull 注解增强空值安全
- 清理冗余的 @Column length 属性
- 前端容量卡片添加刷新提示 tooltip